# internal/business/models/transaction.go
@@ -1,0 +1,7 @@
+package models
+
+type Transaction struct {
+	InvoiceID int
+	Amount    int
+	Reference string
+}
